--- a/services.html
+++ b/services.html
@@ -28,19 +28,19 @@
         <h3>Вет‑осмотр</h3>
         <ul class="bullet"><li>Первичный и повторный приём</li><li>Рекомендации по уходу</li></ul>
         <div class="price">1 200–2 000 ₽</div>
-        <div class="cta-row"><a class="btn primary" href="contact.html#form">Записаться</a><a class="btn outline" href="contact.html#faq">Вопросы</a></div>
+        <div class="cta-row"><a class="btn primary" href="contact.html">Записаться</a><a class="btn outline" href="contact.html#faq">Вопросы</a></div>
       </div>
       <div class="card paper">
         <h3>Вакцинация</h3>
         <ul class="bullet"><li>Индивидуальный календарь</li><li>Напоминания и отметки</li></ul>
         <div class="price">1 000–3 000 ₽</div>
-        <div class="cta-row"><a class="btn primary" href="contact.html#form">Записаться</a></div>
+        <div class="cta-row"><a class="btn primary" href="contact.html">Записаться</a></div>
       </div>
       <div class="card paper">
         <h3>Диагностика</h3>
         <ul class="bullet"><li>УЗИ и анализы по показаниям</li><li>Чёткие заключения</li></ul>
         <div class="price">По согласованию</div>
-        <div class="cta-row"><a class="btn primary" href="contact.html#form">Записаться</a></div>
+        <div class="cta-row"><a class="btn primary" href="contact.html">Записаться</a></div>
       </div>
     </div>
   </section>
