--- a/services.html
+++ b/services.html
@@ -64,7 +64,7 @@
       <div class="card">План “Грум”: стрижка/тримминг каждые 4–8 недель, базовый уход.</div>
     </div>
     <div class="center mt">
-      <a class="btn primary" href="contact.html#form">Присоединиться</a>
+      <a class="btn primary" href="contact.html">Присоединиться</a>
     </div>
   </section>
 </main>
