--- a/booking.html
+++ b/booking.html
@@ -4,9 +4,43 @@
   <meta charset="utf-8">
   <title>Песики — запись</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Шрифты -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <!-- Стили (встроены для простоты деплоя одной страницей) -->
+  <style>
+    :root{
+      --bg:#f6f5f2; --paper:#ffffff; --ink:#1f1f1f; --muted:#6f6f6f; --line:#e6e0d7; --brand:#365f49; --accent:#c58b5f;
+      --shadow:0 18px 40px rgba(0,0,0,.06); --radius:16px;
+    }
+    *{box-sizing:border-box}
+    html,body{margin:0;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,Segoe UI,Roboto,Arial;line-height:1.6}
+    .wrap{max-width:860px;margin:0 auto;padding:18px}
+    .wa-header{position:sticky;top:0;z-index:10;background:linear-gradient(180deg,#fff,#fff0);backdrop-filter:blur(6px);border-bottom:1px solid var(--line)}
+    .brand-line{display:flex;align-items:center;gap:10px}
+    .brand-mark{width:20px;height:20px;border-radius:5px;border:2px solid #222;background:linear-gradient(135deg,#fff,#f1eee7)}
+    .brand-name{font-family:"Cormorant Garamond",serif;font-weight:700;font-size:20px}
+    .brand-tag{font-size:12px;color:var(--muted);border:1px solid var(--line);border-radius:999px;padding:2px 8px}
+    h2{font-family:"Cormorant Garamond",serif;font-weight:700;margin:8px 0 8px}
+    .form{display:block}
+    .group{margin:12px 0}
+    .card{background:var(--paper);border:1px solid var(--line);border-radius:var(--radius);padding:16px;box-shadow:var(--shadow)}
+    .label{display:block;margin-top:8px;font-weight:600}
+    .field{width:100%;margin-top:6px;border:1px solid var(--line);border-radius:12px;padding:10px 12px;outline:none;background:#fff;transition:border-color .15s, box-shadow .15s}
+    .field:focus{border-color:var(--brand);box-shadow:0 0 0 3px rgba(54,95,73,.12)}
+    .field:disabled{background:#f5f4f2;color:#9b9b9b}
+    .field.error{ border-color:#c0392b !important; box-shadow:0 0 0 3px rgba(192,57,43,.12) !important; }
+    .select{appearance:none;background-image:url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='22' height='22' viewBox='0 0 24 24'%3E%3Cpath fill='%236f6f6f' d='m7 10l5 5l5-5z'/%3E%3C/svg%3E");background-repeat:no-repeat;background-position:right 10px center;padding-right:36px}
+    .grid-2{display:grid;grid-template-columns:1fr 1fr;gap:12px}
+    @media(max-width:680px){.grid-2{grid-template-columns:1fr}}
+    .muted{color:var(--muted)}
+    .hint{margin-top:6px}
+    .bar{display:flex;gap:10px;align-items:center;justify-content:space-between;margin-top:10px}
+    .btn{display:inline-flex;align-items:center;gap:10px;border:1px solid var(--brand);color:var(--brand);background:#fff;padding:10px 14px;border-radius:12px;font-weight:700;cursor:pointer}
+    .btn.ghost{border-style:dashed}
+    .btn:disabled{opacity:.5;cursor:not-allowed}
+  </style>
+  <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
@@ -22,6 +56,7 @@
 
   <main class="wrap">
     <form id="form" class="form" autocomplete="off">
+      <!-- Услуга -->
       <section class="group card">
         <h2>Услуга</h2>
         <div class="grid-2">
@@ -40,6 +75,7 @@
         </div>
       </section>
 
+      <!-- Место -->
       <section class="group card">
         <h2>Место и специалист</h2>
         <div class="grid-2">
@@ -56,6 +92,7 @@
         </div>
       </section>
 
+      <!-- Дата/время -->
       <section class="group card">
         <h2>Дата и время</h2>
         <div class="grid-2">
@@ -71,30 +108,212 @@
         <div class="hint muted" id="dateHint"></div>
       </section>
 
+      <!-- Питомец -->
       <section class="group card">
         <h2>Питомец</h2>
-        <div class="grid-2">
-          <label class="label">Выберите питомца
-            <select id="pet" class="field select">
-              <option value="" data-ph>Ввести вручную</option>
-            </select>
-          </label>
-          <label class="label">Имя питомца
-            <input id="pet_name" class="field" placeholder="Бим">
-          </label>
-        </div>
+        <label class="label">Имя питомца
+          <input id="pet_name" class="field" placeholder="Бим" required>
+        </label>
         <label class="label">Примечание
           <textarea id="notes" class="field" rows="3" placeholder="Опционально"></textarea>
         </label>
       </section>
 
       <div class="bar">
-        <div class="note muted" id="hint">Заполните поля — кнопка “Записаться” станет активной.</div>
+        <div class="hint muted" id="hint">Заполните поля — кнопка “Записаться” станет активной.</div>
         <button class="btn ghost" type="button" id="reset">Сбросить</button>
       </div>
     </form>
   </main>
 
-  <script src="booking.js"></script>
+  <script>
+    // Инициализация Telegram MainButton
+    const tg = window.Telegram?.WebApp;
+    if (tg) {
+      tg.ready();
+      tg.expand();
+      tg.MainButton.setParams({ text: 'Записаться', color: '#365f49', text_color: '#ffffff', is_visible: false });
+    }
+
+    // DOM
+    const els = {
+      category: document.getElementById('category'),
+      service: document.getElementById('service'),
+      branch: document.getElementById('branch'),
+      staff: document.getElementById('staff'),
+      date: document.getElementById('date'),
+      time: document.getElementById('time'),
+      pet_name: document.getElementById('pet_name'),
+      notes: document.getElementById('notes'),
+      hint: document.getElementById('hint'),
+      dateHint: document.getElementById('dateHint'),
+      reset: document.getElementById('reset'),
+    };
+
+    // Минимальная дата = сегодня (с учётом TZ клиента)
+    const now = new Date();
+    els.date.min = new Date(now.getTime() - now.getTimezoneOffset()*60000).toISOString().slice(0,10);
+
+    // Статические справочники (заменим на API позже)
+    const services = [
+      { id:'1', category:'vet', name:'Осмотр', dur:20 },
+      { id:'2', category:'vet', name:'Вакцинация', dur:20 },
+      { id:'3', category:'groom', name:'Стрижка', dur:60 },
+      { id:'4', category:'groom', name:'Комплекс', dur:90 },
+    ];
+    const branches = [{ id:'b1', name:'Центр' },{ id:'b2', name:'Юг' }];
+    const staff = [
+      { id:'s1', name:'Ирина', role:'vet', branch_id:'b1' },
+      { id:'s2', name:'Михаил', role:'vet', branch_id:'b2' },
+      { id:'s3', name:'Анна', role:'groom', branch_id:'b1' },
+      { id:'s4', name:'Ольга', role:'groom', branch_id:'b2' },
+    ];
+
+    // Утилиты
+    function setOptions(select, items, placeholder, keepPlaceholder=false){
+      select.innerHTML = '';
+      if (placeholder) {
+        const ph=document.createElement('option'); ph.value=''; ph.textContent=placeholder; ph.setAttribute('data-ph','1');
+        select.appendChild(ph);
+      }
+      items.forEach(it=>{
+        const o=document.createElement('option');
+        o.value=it.id; o.textContent=it.label || it.name;
+        select.appendChild(o);
+      });
+      select.disabled = items.length===0 && !keepPlaceholder;
+    }
+    function removePlaceholder(select){
+      const first = select.querySelector('option[data-ph]');
+      if (first) first.remove();
+    }
+    function onSelectRemovePlaceholder(e){
+      if (e.target.value) removePlaceholder(e.target);
+    }
+    function isSameDate(a,b){ return a.getFullYear()===b.getFullYear() && a.getMonth()===b.getMonth() && a.getDate()===b.getDate(); }
+    function pad(n){ return String(n).padStart(2,'0'); }
+    function toHM(d){ return `${pad(d.getHours())}:${pad(d.getMinutes())}`; }
+
+    // Инициализация
+    (function init(){
+      // Филиалы сразу доступны
+      setOptions(els.branch, branches, '— выбрать —');
+      els.branch.disabled=false;
+
+      els.category.addEventListener('change', onCategory);
+      els.branch.addEventListener('change', onBranch);
+      els.service.addEventListener('change', validate);
+      els.staff.addEventListener('change', validate);
+      els.date.addEventListener('change', onDate);
+      els.time.addEventListener('change', validate);
+      els.pet_name.addEventListener('input', validate);
+      els.notes.addEventListener('input', validate);
+      els.reset.addEventListener('click', resetForm);
+
+      // Убирать placeholder после выбора
+      ['category','service','branch','staff','time'].forEach(id=>{
+        els[id].addEventListener('change', onSelectRemovePlaceholder);
+      });
+
+      if (tg) tg.onEvent('mainButtonClicked', submit);
+    })();
+
+    // Хэндлеры
+    function onCategory(){
+      const cat=els.category.value;
+      const list=services.filter(s=>s.category===cat).map(s=>({id:s.id,name:s.name}));
+      setOptions(els.service, list, list.length? '— выбрать —':'Сначала выберите направление');
+      els.service.disabled = list.length===0;
+      onBranch(); // обновить специалистов под роль
+      validate();
+    }
+
+    function onBranch(){
+      const cat=els.category.value;
+      const bid=els.branch.value;
+      const role=(cat==='groom')?'groom':'vet';
+      const list=staff.filter(s=>s.role===role && (!bid || s.branch_id===bid)).map(s=>({id:s.id,name:s.name}));
+      setOptions(els.staff, list, list.length? '— выбрать —':'Сначала выберите филиал');
+      els.staff.disabled = list.length===0;
+      validate();
+    }
+
+    function onDate(){
+      const v=els.date.value;
+      if(!v){
+        setOptions(els.time, [], 'Сначала выберите дату', true);
+        els.time.disabled=true;
+        return;
+      }
+      const selected = new Date(v+'T00:00');
+      const isToday = isSameDate(selected, new Date());
+      const nowHM = toHM(new Date());
+
+      // слоты 09:00–19:30 с шагом 30 минут
+      const base=[];
+      for(let h=9; h<=19; h++){
+        base.push(`${pad(h)}:00`);
+        if(h<19) base.push(`${pad(h)}:30`);
+      }
+      // для сегодняшнего дня скрываем прошедшие
+      const slots = isToday ? base.filter(t => t > nowHM) : base;
+
+      setOptions(els.time, slots.map(t=>({id:t,name:t})), slots.length? '— выбрать —':'Нет свободных слотов');
+      els.time.disabled = slots.length===0;
+      els.dateHint.textContent = slots.length? '' : 'На выбранную дату нет доступных слотов. Выберите другой день.';
+      validate();
+    }
+
+    function validate(){
+      // Снять прошлые ошибки
+      [els.category,els.service,els.branch,els.staff,els.date,els.time,els.pet_name].forEach(el=>el.classList.remove('error'));
+
+      const ok = !!(els.category.value && els.service.value && els.branch.value &&
+                    els.staff.value && els.date.value && els.time.value &&
+                    els.pet_name.value.trim().length>=2);
+
+      if (!ok){
+        if(!els.category.value) els.category.classList.add('error');
+        if(!els.service.value)  els.service.classList.add('error');
+        if(!els.branch.value)   els.branch.classList.add('error');
+        if(!els.staff.value)    els.staff.classList.add('error');
+        if(!els.date.value)     els.date.classList.add('error');
+        if(!els.time.value)     els.time.classList.add('error');
+        if(els.pet_name.value.trim().length<2) els.pet_name.classList.add('error');
+      }
+
+      els.hint.textContent = ok ? 'Проверьте данные и нажмите “Записаться”.' : 'Заполните поля — кнопка “Записаться” станет активной.';
+      if (tg) tg.MainButton.setParams({ is_visible: ok });
+    }
+
+    function submit(){
+      const payload = {
+        type:'booking',
+        category:els.category.value,
+        service_id:els.service.value,
+        branch_id:els.branch.value,
+        staff_id:els.staff.value,
+        date:els.date.value,
+        time:els.time.value,
+        pet_name: els.pet_name.value.trim(),
+        notes: els.notes.value.trim()
+      };
+      if (tg) tg.sendData(JSON.stringify(payload));
+      else alert('Откройте страницу из Telegram, чтобы отправить запись.');
+    }
+
+    function resetForm(){
+      els.category.value='';
+      els.service.innerHTML='<option value="" data-ph>Сначала выберите направление</option>'; els.service.disabled=true;
+      els.branch.value='';
+      els.staff.innerHTML='<option value="" data-ph>Сначала выберите филиал</option>'; els.staff.disabled=true;
+      els.date.value='';
+      els.time.innerHTML='<option value="" data-ph>Сначала выберите дату</option>'; els.time.disabled=true;
+      els.pet_name.value=''; els.notes.value='';
+      [els.category,els.service,els.branch,els.staff,els.date,els.time,els.pet_name].forEach(el=>el.classList.remove('error'));
+      els.hint.textContent='Заполните поля — кнопка “Записаться” станет активной.';
+      if (tg) tg.MainButton.setParams({ is_visible:false });
+    }
+  </script>
 </body>
 </html>
